--- a/HeartDetection.ipynb
+++ b/HeartDetection.ipynb
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "# to group the rows of the Heart DataFrame by the values in the column indexed by 60\n",
+    "# to group the rows of the Heart DataFrame by the values in the last column indexed by -1\n",
     "# and then calculate the mean of each group for all other columns.\n",
     "heart_data.groupby(heart_data.columns[-1]).mean()"
    ]
