--- a/HousePricePrediction.ipynb
+++ b/HousePricePrediction.ipynb
@@ -26,8 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diabetes Disease Dataset\n",
-    "- Dataset: Data Collection and Data Processing\n",
+    "# Dataset: Data Collection and Data Processing\n",
     "- https://www.kaggle.com/datasets/altavish/boston-housing-dataset"
    ]
   },
