update on heart

--- a/HeartDetection.ipynb
+++ b/HeartDetection.ipynb
@@ -291,11 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model Training --> Logistic Regression\n",
+    "# Model Training --> Linear Regression\n",
     "model = LinearRegression()"
    ]
   },
