--- a/BigMartSalesData.ipynb
+++ b/BigMartSalesData.ipynb
@@ -679,6 +679,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Pre-Processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -741,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Label Encoding \n",
+    "# Label Encoding for Categorical Feature\n",
     "Label encoding is a technique used to convert categorical labels into numerical values. In scikit-learn, you can use the `LabelEncoder` class from the `sklearn.preprocessing` module to perform label encoding. Here's a quick guide on how to use it:\n",
     "\n",
     "1. **Import the necessary library**:\n",
@@ -823,6 +830,13 @@
    ],
    "source": [
     "big_mart_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitting the data into Training data & Testing Data"
    ]
   },
   {
